--- a/demo.html
+++ b/demo.html
@@ -2,11 +2,11 @@
 <meta charset='utf-8'>
 <html>
   <head>
-    <title>deko-details demo</title>
+    <title>deko-deks demo</title>
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="deko-details.html">
+    <link rel="import" href="deko-deks.html">
   </head>
   <body>
-    <deko-details ></deko-details>
+    <deko-deks ></deko-deks>
   </body>
 </html>
