--- a/deko-deks.html
+++ b/deko-deks.html
@@ -13,7 +13,7 @@
 </dom-module>
 <script>
   Polymer({
-    is: "deko-deks",,
+    is: "deko-deks",
     properties:{
       ref: {
         observer:"setRef",
