--- a/deko-deks.html
+++ b/deko-deks.html
@@ -9,6 +9,8 @@
     <h2>Pick/Add deks here</h2>
     <app-route route="{{route}}" pattern="/:data" data="{{routeData}}" tail="{{tail}}"></app-route>
     picking [[routeData.data]]
+    <hr>
+    [[dek.id]]    
   </template>
 </dom-module>
 <script>
