--- a/deko-deks.html
+++ b/deko-deks.html
@@ -36,7 +36,7 @@
       }
     },
     setRef: function(deks, dek) {
-      if (deks) {
+      if (deks && dek) {
         return {ref: deks.doc(dek)}
       }
     },
