--- a/deko-deks.html
+++ b/deko-deks.html
@@ -33,7 +33,7 @@
         notify: true,
       },
       _getDeks: {
-        computed: "setDeks(deks)",
+        computed: "setDeks(ref)",
       },
       deks:{
         value: []
