--- a/deko-deks.html
+++ b/deko-deks.html
@@ -12,7 +12,7 @@
     <hr>
     [[dek.id]]    
     <template is="dom-repeat" items="[[deks]]">
-      <a href="[[item]]">[[item]]</a>
+      <a href="[[item]]#cards">[[item]]</a>
     </template>
   </template>
 </dom-module>
