--- a/deko-deks.html
+++ b/deko-deks.html
@@ -62,9 +62,7 @@
     },
     setRef: function(deks, dek) {
       if (deks && dek) {
-        deks.doc(dek).set({name:dek}).then(function(e){
-          console.log(e)
-        }).catch(function(e){
+        deks.doc(dek).set({name:dek}).then().catch(function(e){
           console.log(e)
         })
         return {ref: deks.doc(dek)}
